--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,8 @@
 		"bradlc.vscode-tailwindcss",
 		"prisma.prisma",
 		"dbaeumer.vscode-eslint",
-		"esbenp.prettier-vscode"
+		"esbenp.prettier-vscode",
+		"github.copilot-chat",
+		"github.copilot"
 	]
 }
